--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.48.0",
     "framer-motion": "^8.4.3",
     "react-countup": "^6.4.0",
     "react-icons": "^4.7.1",
